Grid bugfixes made apparent on Safari - Equal height rows need to fix the .row:before and .row:after styles

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -89,6 +89,10 @@ section p {
     .row--equalHeights > [class*='col-'] {
         @include display-flex;
     }
+
+    .row--equalHeights:before, .row--equalHeights:after {
+        @include display-flex;
+    }
 }
 
 
